# cqrs-es-demo-sqlite

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  release.yml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml
migrations/: 20221115144837_account_query.sql
src/: config.rs  main.rs  metadata_extension.rs  metadata_extractor.rs  queries.rs  route_handler.rs  state.rs
src/domain/: aggregate.rs
