[package]
name = "cqrs-es-demo-sqlite"
version = "0.4.4"
authors = ["John Bledsoe",
           "Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "serverless", "sqlite"]
description = "A demo application for cqrs-es and sqlite-es crates."
repository = "https://github.com/johnbcodes/cqrs-es-demo-sqlite"
readme = "README.md"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.5"
cqrs-es = "0.4.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite-es = "0.4.5"
sqlx = { version = "0.6", features = [ "postgres" , "runtime-tokio-rustls", "json"] }
tokio = { version = "1", features = ["full"] }

chrono = "0.4"
tower = "0.4"
tower-http = "0.3"
