[package]
name = "cqrs-es-demo-sqlite"
version = "0.4.10"
authors = ["John Bledsoe",
           "Dave Garred <dave.garred@serverlesstechnology.com>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["cqrs", "event-sourcing", "sqlite"]
description = "A demo application for cqrs-es and sqlite-es crates."
repository = "https://github.com/johnbcodes/cqrs-es-demo-sqlite"
readme = "README.md"
publish = false

[dependencies]
async-trait = "0.1"
axum = "0.8"
cqrs-es = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
sqlite-es = "0.4"
sqlx = { version = "0.8.1", features = [ "json", "runtime-tokio-rustls", "sqlite" ] }
time = { version = "0.3", features = [ "formatting" ] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = "0.6"
